# haskell-purescript-binding

./: .gitignore  README.md  haskell-purescript-binding.cabal
Language/Haskell/PureScript/: Internal.hs
Language/PureScript/: Binding.hs
Language/PureScript/Binding/: Class.hs  Dependency.hs  Generation.hs  TH.hs
examples/: README.md  example.hs  foreign.js  foreign.purs  main.purs  output.js
examples/outputs/: foreign.purs  output.js
