name:                haskell-purescript-binding
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.PureScript.Binding
                       Language.PureScript.Binding.Class
                       Language.PureScript.Binding.Dependency
                       Language.PureScript.Binding.TH
  -- other-modules:       
  build-depends:       base               >=4.7 && <4.8
                     , template-haskell   >=2.9 && <2.10
                     , aeson              >=0.7 && <0.9
                     , text               >=1.1 && <1.2
                     , scientific         >=0.3 && <0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
